<resources>
    <string name="enter_text">Please enter text</string>
    <string name="enter_text_btn">Enter</string>
    <string name="no_intenet">No Internet connection pleeeeeeease turn on intertnet.</string>
    <string name="fatal_error">Fatal Exception. Please dont worry.</string>
    <string name="time_out">Time for Response out</string>
    <string name="error_tittle">Error</string>
    <string name="error_desc">An error has occurred in the application, should I report it?</string>
    <string name="error_pos">Report</string>
    <string name="error_nega">Cancell</string>
    <string name="error_thanks">Thanks )</string>
    <string name="error_descrs">Describe your problem</string>
    <string name="report_report">Report</string>
    <string name="login_loginregister">Login / Register</string>
    <!-- Strings used for fragments for navigation -->

    <string name="login_email" translatable="false">Email</string>
    <string name="login_password">Password</string>
    <string name="login_with">with games.m2023.ru</string>
    <string name="login_error_email">Email not right</string>
    <string name="login_error_password">Password not rignt</string>
    <string name="login_codehint">Code</string>
    <string name="login_emailaccept">We have sent an email to your email with a link to the login confirmation:</string>
    <string name="login_check">Check Email accept</string>
    <string name="login_login">Login</string>
    <string name="login_back">Back</string>
    <string name="request_error">An error occurred during the request, check your internet connection and try again later</string>
    <string name="login_errorinput_mail">Email not verifered</string>
    <string name="login_verifymail_tittle">Confirm your email</string>
    <string name="login_verifymail_descr">Registration is completed, but confirmation of your mailing address is required, Check your mailbox.</string>
    <string name="login_logout">Log Out</string>
    <string name="login_why">Login / Register to sync your data with games.m2023.ru</string>
    <string name="error_toomanyaccounts_desrr">Similar there are too many accounts created on your phone (more than one). You will have to delete them for this application to work.</string>
    <string name="error_toomany">You already have account!</string>
    <string name="error_settings">Открыть настройки</string>
    <string name="login_name" translatable="false">games.m2023.ru</string>
    <string name="login_notact">You token is not actual. You need to relogin.</string>
    <string name="login_register">Register</string>
    <string name="title_activity_register" />
    <!-- Strings used for fragments for navigation -->

</resources>